--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.0",
-    "next": "12.1.2",
+    "@tailwindcss/forms": "^0.3.3",
+    "dotenv": "16.0.0",
+    "firebase": "^9.6.10",
+    "next": "12.1.0",
+    "next-auth": "3.27.3",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
